--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "4.3.1",
     "image-webpack-loader": "^8.1.0",
     "jquery": "^3.6.0",
-    "popper.js": "^1.16.0"
+    "popper.js": "1.16.0"
   }
 }
